@@ -1,0 +1,16 @@
+# Example LocalConfig.mk
+#
+# $Id$
+#
+# This file is a good starting point for using the JBE under Windows and Cygwin.
+
+# The default directory for Cygwin tools.
+
+TOOLS_DIR := C:/cygwin/bin
+
+# Standard directories for Sun JDKs.  Because
+# we don't specify SITE_JDK_VENDOR or SITE_JDK_RELEASE, projects
+# will compile using Sun's JDK 1.3 unless overriden locally.
+
+JDK_Sun_1.2.2_DIR := C:/jdk1.2.2
+JDK_Sun_1.3_DIR := C:/jdk1.3
