@@ -1,0 +1,11 @@
+# Example SiteConfig.mk
+# 
+# $Id$
+#
+# Defines the platform.  Possible values are: Cygwin, Solaris.
+# The platform is used to select the correct adaptor makefile for general
+# tools (Platform.*.mk) and JDK tools (JDK.Vendor_*.mk).
+#
+
+SITE_PLATFORM := Cygwin
+
